Styles version number and slogan at bottom of page

--- a/main.css
+++ b/main.css
@@ -78,3 +78,8 @@ button:hover {
 .quater-page {
     width: 25%;
 }
+
+/* Version Number & Slogan */
+#version-number-and-slogan small {
+    display: block;
+}
