--- a/main.css
+++ b/main.css
@@ -85,19 +85,21 @@ button:hover {
 }
 
 /* Gallery Images */
-.gallery-image {
+.gallery_text h4 {
+    margin: 0;
+    padding: 5px;
+}
+
+.gallery_image {
     background-color: white;
     border: 5px black solid;
     padding: 25px;
-}
-
-/* Jeo Logo Image */
-#gallery-image-1 {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
+/* Jeo Logo Image */
 #jeo-logo {
     height: 300px;
     width: 300px;
