Renames id for Jeo logo to be more specific.

--- a/main.css
+++ b/main.css
@@ -109,7 +109,7 @@ button:hover {
     align-items: center;
 }
 
-#jeo-logo-circle {
+#jeo-logo-white-outer-circle {
     background-color: white;
     height: 250px;
     width: 250px;
