Adds final innter white circle to jeo logo. Adds styling to center all circles nestled within each other.

--- a/main.css
+++ b/main.css
@@ -127,6 +127,12 @@ button:hover {
     align-items: center;
 }
 
+#jeo-logo-white-inner-circle {
+    background-color: white;
+    height: 150px;
+    width: 150px;
+}
+
 /* Version Number & Slogan */
 #version-number-and-slogan small {
     display: block;
