--- a/main.css
+++ b/main.css
@@ -133,6 +133,12 @@ button:hover {
     width: 115px;
 }
 
+#jeo-logo-black-vertical-rectangle {
+    background-color: black;
+    height: 100px;
+    width: 50px;
+}
+
 /* Version Number & Slogan */
 #version-number-and-slogan small {
     display: block;
